data/derived/comb/progs/unify/prog6505.ml.out
Characters 105-116:
  |Cosine(e)->cos(pi*.eval(e,x,y))
                      ^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         float
